--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<title>Abdalla Abdalla</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -21,27 +21,39 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Abdalla Abdalla</h1>
+							<p>Data Scientist and Machine Learning Engineer</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/Photos/graduation.JPG" alt="" /></span>
 						</div>
 					</section>
 
-				<!-- Section -->
-					<section id="first">
+					<section id="about">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>About Me</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p>Hi, I'm Abdalla, a passionate Data Scientist with a Bachelor's degree in Physical Natural Sciences from the University of Cambridge. I have extensive experience in machine learning, data analysis, and AI, with a strong focus on leveraging data-driven insights to solve complex problems.</p>
 						</div>
 					</section>
+					<section id="skills">
+						<header>
+							<h2>Skills</h2>
+						</header>
+						<div class="content">
+							<h3>Programming Languages</h3>
+							<p>Python, SQL, R, LaTeX, Markdown, MATLAB</p>
+							<h3>Tools and Libraries</h3>
+							<p>Power BI, Tableau, Git, VS Code, Visual Studio, PyCharm, Jupyter Notebook, Streamlit</p>
+							<h3>Machine Learning Skills</h3>
+							<p>Neural Networks, NLP, Supervised and Unsupervised Learning, Model Evaluation, Data Preprocessing, Monte Carlo Simulations, Sentiment Analysis, Generative AI</p>
+						</div>
+					</section>
+					
 
 				<!-- Section -->
 					<section>
