--- a/index.html
+++ b/index.html
@@ -33,14 +33,20 @@
 					</section>
 
 				<!-- About Me Section -->
+				
 					<section id="about">
 						<header>
 							<h2>About Me</h2>
 						</header>
 						<div class="content">
 							<p>Hi, I'm Abdalla, a passionate Data Scientist with a Bachelor's degree in Physical Natural Sciences from the University of Cambridge. I have extensive experience in machine learning, data analysis, and AI, with a strong focus on leveraging data-driven insights to solve complex problems.</p>
+				<!-- Resume Download Button -->
+						<div class="resume-download">
+							<a href="Resume_Abdalla.pdf" download="Resume_Abdalla.pdf" class="button primary">Download My Resume</a>
+						</div>
 						</div>
 					</section>
+
 
 				<!-- Skills Section -->
 					<section id="skills">
