Fixing Get in touch button so I get emails

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Paradigm Shift by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Abdalla Abdalla</title>
@@ -190,23 +185,27 @@
 						</div>
 					</section>
 
-				<!-- Get in Touch Section -->
+					<!-- Get in Touch Section -->
 					<section id="contact">
 						<header>
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Contact Me</strong> If you have any questions or want to let me know of opportunities</p>
-							<form>
+							<p><strong>Feel free to reach out</strong> if you have any inquiries or would like to inform me about potential opportunities.</p>
+							<form action="https://formspree.io/f/xovadgkn" method="POST">
 								<div class="fields">
 									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" name="name" id="name" placeholder="Name" required />
 									</div>
 									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
+										<input type="email" name="_replyto" id="email" placeholder="Email" required />
 									</div>
 									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
+										<textarea name="message" id="message" placeholder="Message" rows="7" required></textarea>
+									</div>
+									<!-- Honeypot field to prevent spam -->
+									<div style="display: none;">
+										<input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
 									</div>
 								</div>
 								<ul class="actions">
@@ -218,26 +217,27 @@
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">abdalla7294@outlook.com</a>
+									<a href="mailto:abdalla7294@outlook.com">abdalla7294@outlook.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(612) 201-5656</a>
+									<a href="tel:+16122015656">(612) 201-5656</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>St Paul, Minnesota, United States</span>
+									<span>1234 Somewhere Road, Nashville, TN 00000</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/abdalla7294" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-										<li><a href="https://www.github.com/Duxst" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</li>
 							</ul>
 						</footer>
 					</section>
+					
 
 			</div>
 
