--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>Saint Paul, Minnesota, United States</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
