--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						</header>
 						<div class="content">
 							<h3>Programming Languages</h3>
-							<p>Python, SQL, R, LaTeX, Markdown, MATLAB</p>
+							<p>Python, SQL, R, MATLAB, HTML, JavaScript, CSS </p>
 
 							<h3>Tools</h3>
 							<p>Power BI, Tableau, Git, VS Code, Visual Studio, PyCharm, Jupyter Notebook, Streamlit</p>
