Adding more experience

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p>Hi, I'm Abdalla, a passionate Data Scientist with a Bachelor's degree in Physical Natural Sciences from the University of Cambridge. I have extensive experience in machine learning, data analysis, and AI, with a strong focus on leveraging data-driven insights to solve complex problems.</p>
 				<!-- Resume Download Button -->
 						<div class="resume-download">
-							<a href="Resume_Abdalla.pdf" download="Resume_Abdalla.pdf" class="button primary">Download My Resume</a>
+							<a href="Resume_Gen.pdf" download="Resume_Abdalla.pdf" class="button primary">Download My Resume</a>
 						</div>
 						</div>
 					</section>
@@ -53,13 +53,13 @@
 							<p>Python, SQL, R, MATLAB, HTML, JavaScript, CSS </p>
 
 							<h3>Tools</h3>
-							<p>Power BI, Tableau, Git, VS Code, Visual Studio, PyCharm, Jupyter Notebook, Streamlit</p>
+							<p>Power BI, Tableau, Git, VS Code, Visual Studio, PyCharm, Jupyter Notebook</p>
 
 							<h3>Libraries</h3>
-							<p>NumPy, pandas, Matplotlib, SciPy, scikit-learn, TensorFlow, Keras, XGBoost, OpenCV</p>
+							<p>NumPy, pandas, Matplotlib, scikit-learn, TensorFlow, YOLO, XGBoost, OpenCV, Next.js, Streamlit,</p>
 
 							<h3>Machine Learning Skills</h3>
-							<p>Neural Networks, Natural Language Processing (NLP), Supervised and Unsupervised Learning, Model Evaluation and Validation, Data Preprocessing and Augmentation, Monte Carlo Simulations, Sentiment Analysis, Generative AI</p>
+							<p>Neural Networks, Natural Language Processing (NLP), Computer Vision, Risk Analysis, Data Preprocessing and Augmentation, Monte Carlo Simulations, Sentiment Analysis, Generative AI</p>
 						</div>
 					</section>
 
@@ -69,6 +69,28 @@
 							<h2>Experience</h2>
 						</header>
 						<div class="content">
+							<div class="experience-item">
+								<h3>Software Engineering Fellow</h3>
+								<p><strong>Headstarter AI</strong> | Remote | July 2024 – September 2024</p>
+								<div class="experience-details">
+									<img src="images/Photos/headstarter.png" alt="Headstarter Fellowship" class="experience-image" />
+									<ul>
+										<li><strong>Role Description:</strong>Developed AI-driven SaaS platforms using Next.js, React, Firebase, and OpenAI, integrating Stripe for payments and Clerk for authentication. Led a project with HIT AI Coach (HIT Coach), building a machine learning model to detect and analyze fighters' punches using computer vision tools like OpenCV and YOLO. Successfully presented this work to a non-technical audience, earning 2nd place out of 570 teams. Deployed scalable cloud solutions on GCP and Vertex AI, utilizing Google Analytics for performance optimization.
+
+										</li>
+										<li><strong>Responsibilities and Achievements:</strong>
+											<ul>
+												<li>Integrated Stripe for payment processing and Clerk for secure user authentication in SaaS platforms.</li>
+												<li>Implemented an AI-powered customer support assistant tools using OpenAI's GPT models.</li>
+												<li>Designed and deployed secure cloud-based backend systems using GCP and Vertex AI for performance and scalability.</li>
+												<li>Led computer vision efforts, utilizing OpenCV, MediaPipe, and YOLO for video-based applications, with models deployed using Docker and Vertex AI.</li>
+												<li>Utilized Google Analytics to track user behavior, improving application performance through data-driven decisions.</li>
+												<li>Presented complex AI-driven applications effectively to non-technical audiences, highlighting technical expertise and communication skills.</li>
+											</ul>
+										</li>
+									</ul>
+								</div>
+							</div>
 
 							<!-- Thornton Tomasetti Experience -->
 							<div class="experience-item">
