--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<div class="experience-details">
 									<img src="images/Photos/headstarter.png" alt="Headstarter Fellowship" class="experience-image" />
 									<ul>
-										<li><strong>Role Description:</strong>Developed AI-driven SaaS platforms using Next.js, React, Firebase, and OpenAI, integrating Stripe for payments and Clerk for authentication. Led a project with HIT AI Coach (HIT Coach), building a machine learning model to detect and analyze fighters' punches using computer vision tools like OpenCV and YOLO. Successfully presented this work to a non-technical audience, earning 2nd place out of 570 teams. Deployed scalable cloud solutions on GCP and Vertex AI, utilizing Google Analytics for performance optimization.
+										<li><strong>Role Description:</strong>Developed AI-driven SaaS platforms using Next.js, React, Firebase, and OpenAI, integrating Stripe for payments and Clerk for authentication. Led a project with HIT AI (HIT Coach), building a machine learning model to detect and analyze fighters' punches using computer vision tools like OpenCV and YOLO. Successfully presented this work to a non-technical audience, earning 2nd place out of 570 teams. Deployed scalable cloud solutions on GCP and Vertex AI, utilizing Google Analytics for performance optimization.
 
 										</li>
 										<li><strong>Responsibilities and Achievements:</strong>
